<resources>    <string name="app_name">GADS Project</string>    <string name="title_activity_leader_board">LeaderBoardActivity</string>    <string name="learning_leaders">Learning Leaders</string>    <string name="skill_iq_leaders">Skill IQ Leaders</string>    <string name="leaderboard">LEADERBOARD</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="google_africa">Google Africa</string>    <string name="developer_scholarship">Developer Scholarship</string>    <string name="email_address">Email Address</string>    <string name="project_on_github_link">Project on GITHUB (link)</string>    <string name="project_submission">Project Submission</string>    <string name="first_name">First Name</string>    <string name="last_name">Last Name</string>    <string name="submit">Submit</string>    <string name="yes">Yes</string>    <string name="are_you_sure">Are you sure ?</string>    <string name="submission_successful">Submission successful</string>    <string name="submission_unsuccessful">Submission unsuccessful</string></resources>